<resources>
    <string name="app_name">VenueSuite</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="new_user">New User?</string>
    <string name="users_name">%s</string>

    <!--<string name="default_web_client_id">New User?</string>-->
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Activity Labels-->
    <string name="register_activity">Register Activity</string>
    <string name="login_activity">Login Activity</string>
    <string name="newpass_acitivty">New Password</string>
    <string name="main_activity">Logged In</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="additional_reqs">Additional Information / Special Requests</string>
    <string name="date">Date</string>
    <string name="males"># of Males</string>
    <string name="females"># of Females</string>


    <string name="search_guests">Search Guests</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="venue_suite">Venue Suite</string>
    <string name="description">Hiding Password Example</string>
    <string name="default_notification_channel_id">notification channel</string>


</resources>
